Work on the Store API
